--- a/Front/src/palettes.scss
+++ b/Front/src/palettes.scss
@@ -1,6 +1,6 @@
 /*1f1f1f: Este es el negro del header, footer y sidenav*/
 /*e61b15: Este es el rojo principal*/
-
+/*5d5d5d: Este es el gris de mensajes del back sin correr y carga*/
 
 
 
