--- a/Front/src/app/main/candidate-panel/candidate-panel.component.html
+++ b/Front/src/app/main/candidate-panel/candidate-panel.component.html
@@ -1,4 +1,10 @@
 <div class="container">
+  <div class="back-container">
+    <button mat-icon-button class="back-button" (click)="goBack()">
+      <mat-icon>arrow_back</mat-icon>
+    </button>
+  </div>
+  
   <div class="candidate-profile-container">
     <div class="candidate-header-card">
       <div class="avatar-section">
