--- a/Front/src/app/main/admin-tech-labels-manager/admin-tech-labels-manager.component.html
+++ b/Front/src/app/main/admin-tech-labels-manager/admin-tech-labels-manager.component.html
@@ -93,16 +93,23 @@
     </div>
 
     <!-- Controles de paginación -->
-    <div class="pagination-controls" *ngIf="allLabels.length > 0">
-      <button mat-raised-button (click)="previousPage()" [disabled]="currentPage === 1">
-        <mat-icon>chevron_left</mat-icon>
-        Anterior
-      </button>
-      <span>Página {{ currentPage }} de {{ totalPages }}</span>
-      <button mat-raised-button (click)="nextPage()" [disabled]="currentPage === totalPages">
-        Siguiente
-        <mat-icon>chevron_right</mat-icon>
-      </button>
+    <div class="pagination-container" *ngIf="allLabels.length > 0 && totalPages > 1">
+      <div class="pagination-info">
+        <p>Total: {{ allLabels.length }} etiquetas</p>
+      </div>
+      <div class="pagination-controls">
+        <button mat-button [disabled]="currentPage === 1" (click)="previousPage()">
+          <mat-icon>navigate_before</mat-icon>
+          Anterior
+        </button>
+        <span class="page-numbers">
+          <span class="current-page">{{ currentPage }}</span> / {{ totalPages }}
+        </span>
+        <button mat-button [disabled]="currentPage === totalPages" (click)="nextPage()">
+          Siguiente
+          <mat-icon>navigate_next</mat-icon>
+        </button>
+      </div>
     </div>
   </div>
 </div>
