--- a/Front/src/app/app.component.css
+++ b/Front/src/app/app.component.css
@@ -35,7 +35,7 @@ mat-nav-list a {
   margin: 4px 8px;
   border-radius: 6px;
   color: white !important;
-  background-color: transparent !important;
+  /* background-color: transparent !important; */
   transition: all 0.2s ease;
   height: 48px;
   width: calc(100% - 16px); /* Ajustar para respetar los márgenes */
@@ -61,11 +61,6 @@ mat-nav-list a mat-icon {
   background-color: transparent !important;
   margin-right: 16px;
   transition: transform 0.2s ease;
-}
-
-mat-nav-list a.active {
-  background-color: rgba(230, 27, 21, 0.15) !important;
-  /* border-left: 3px solid #e61b15; */
 }
 
 mat-nav-list a:hover {
