--- a/Front/src/app/main/admin-tech-labels-manager/admin-tech-labels-manager.component.css
+++ b/Front/src/app/main/admin-tech-labels-manager/admin-tech-labels-manager.component.css
@@ -1,27 +1,31 @@
 /* Layout principal */
+.main-content {
+  max-width: 100%;
+  margin: 0 5% 0 5%;
+  padding: 2%;
+}
 .admin-tech-labels-manager {
-  padding: 16px;
+  /* padding: 16px;
   width: 100%;
   max-width: 100vw;
-  box-sizing: border-box;
-  background-color: #f5f5f5;
+  box-sizing: border-box; */
+  width: 100%;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: #333333;
-  min-height: calc(100vh - 64px);
-  overflow-x: hidden;
+  /* min-height: calc(100vh - 64px); */
+  /* overflow-x: hidden; */
 }
 
 /* Título principal */
 .admin-tech-labels-manager h2 {
   font-size: 28px;
   font-weight: 600;
-  margin: 0 auto 16px auto;
+  /* margin: 0 auto 16px auto; */
   color: #333333;
   text-align: center;
   padding-bottom: 12px;
   border-bottom: 3px solid #e61b15;
-  width: 90%;
-  max-width: 800px;
+  width: 100%;
 }
 
 /* Estados de carga y error */
@@ -66,8 +70,8 @@
 
 /* Sección de crear nueva etiqueta */
 .create-label {
-  width: 90%;
-  max-width: 50rem;
+  width: 100%;
+  /* max-width: 50rem; */
   margin: 0 auto 16px auto;
   background-color: #ffffff;
   padding: 16px;
@@ -120,8 +124,8 @@
 
 /* Contenedor de tabla */
 .table-container {
-  width: 90%;
-  max-width: 50rem;
+  width: 100%;
+  /* max-width: 50rem; */
   margin: 0 auto 16px auto;
   background-color: #ffffff;
   border-radius: 15px;
