--- a/Front/src/app/main/company-panel/company-panel.component.css
+++ b/Front/src/app/main/company-panel/company-panel.component.css
@@ -1,3 +1,8 @@
+.offers-container {
+  max-width: 100%;
+  margin: 0 5% 0 5%;
+  padding: 2%;
+}
 .main-content {
   display: flex;
   justify-content: space-between;
