--- a/Front/src/app/main/offer-details/offer-details.component.css
+++ b/Front/src/app/main/offer-details/offer-details.component.css
@@ -112,8 +112,8 @@
 
 /* == CONTENEDOR PRINCIPAL == */
 .offer-details-container {
-  max-width: 100dvh;
-  margin: 0 auto;
+  max-width: 100%;
+  margin: 0 5% 0 5%;
   padding: 2%;
 }
 
@@ -269,7 +269,7 @@ mat-card-header {
 }
 
 .tab-content {
-  padding: 24px;
+  padding-top: 24px;
 }
 
 /* Tarjeta de detalles */
