--- a/Front/src/app/main/recommended-offers/recommended-offers.component.css
+++ b/Front/src/app/main/recommended-offers/recommended-offers.component.css
@@ -1,8 +1,8 @@
 /* === CONTENEDOR PRINCIPAL === */
 .offers-container {
+  max-width: 100%;
+  margin: 0 5% 0 5%;
   padding: 2%;
-  background-color: #f2f2f2;
-  min-height: 100vh;
 }
 
 /* === ENCABEZADO DE LA PÁGINA === */
