Token Watcher Fixed!!

--- a/Front/src/app/main/company-panel/company-panel.component.css
+++ b/Front/src/app/main/company-panel/company-panel.component.css
@@ -498,7 +498,7 @@ mat-card-header {
   align-items: center;
   padding: 2%;
   margin: 0.2% 0%;
-  background-color: #e61b15;
+  background-color: #1f1f1f;
   color: #ffe1e0;
   border-radius: 15px;
   font-size: 0.75rem;
