--- a/Front/src/app/main/company-panel/company-panel.component.css
+++ b/Front/src/app/main/company-panel/company-panel.component.css
@@ -499,7 +499,7 @@ mat-card-header {
   padding: 2%;
   margin: 0.2% 0%;
   background-color: #1f1f1f;
-  color: #ffe1e0;
+  color: #ffffff;
   border-radius: 15px;
   font-size: 0.75rem;
   white-space: nowrap;
