--- a/Front/src/app/main/recommended-offers/recommended-offers.component.css
+++ b/Front/src/app/main/recommended-offers/recommended-offers.component.css
@@ -81,7 +81,7 @@
   padding-left: 1%;
   border: none;
   border-radius: 15px;
-  background-color: #f2f2f2;
+  background-color: transparent;
   font-size: medium;
 }
 
